Adds sp_cmt_cpp_region_regex option
This option lets the user specify which comments they use as region markers, and so
can have different options (currently only spacing).

This also updates the existing tests for region string processing by ensuring it's a
substring match, and that the default doesn't match "BEGIN" or "END" just anywhere in
the line.

--- a/etc/uigui_uncrustify.ini
+++ b/etc/uigui_uncrustify.ini
@@ -2215,6 +2215,14 @@ Choices=sp_cmt_cpp_region=ignore|sp_cmt_cpp_region=add|sp_cmt_cpp_region=remove|
 ChoicesReadable="Ignore Sp Cmt Cpp Region|Add Sp Cmt Cpp Region|Remove Sp Cmt Cpp Region|Force Sp Cmt Cpp Region"
 ValueDefault=ignore
 
+[Sp Cmt Cpp Region Regex]
+Category=1
+Description="<html>If set, comments matching sp_cmt_cpp_region_regex will be considered C++ region<br/>marker comments for the purposes of honoring sp_cmt_cpp_region, instead of those<br/>matching '^BEGIN' or '^END'.</html>"
+Enabled=false
+CallName=sp_cmt_cpp_region_regex=
+EditorType=string
+ValueDefault=
+
 [Sp Cmt Cpp Doxygen]
 Category=1
 Description="<html>If true, space added with sp_cmt_cpp_start will be added after Doxygen<br/>sequences like '///', '///&lt;', '//!' and '//!&lt;'.</html>"
