--- a/etc/defaults.cfg
+++ b/etc/defaults.cfg
@@ -975,6 +975,11 @@ sp_cmt_cpp_start                = ignore   # ignore/add/remove/force/not_defined
 # Overrides sp_cmt_cpp_start.
 sp_cmt_cpp_region               = ignore   # ignore/add/remove/force/not_defined
 
+# If set, comments matching sp_cmt_cpp_region_regex will be considered C++ region
+# marker comments for the purposes of honoring sp_cmt_cpp_region, instead of those
+# matching '^BEGIN' or '^END'.
+sp_cmt_cpp_region_regex         = ""         # string
+
 # If true, space added with sp_cmt_cpp_start will be added after Doxygen
 # sequences like '///', '///<', '//!' and '//!<'.
 sp_cmt_cpp_doxygen              = false    # true/false
