Add pp_indent_continue option
This option specifies an additional indent to be added on to the beginning of each
continued (NLCONT) preprocessor line. This is done regardless of other pp_ spacing
options. This number may be negative.

--- a/etc/uigui_uncrustify.ini
+++ b/etc/uigui_uncrustify.ini
@@ -7080,6 +7080,16 @@ MinVal=0
 MaxVal=16
 ValueDefault=1
 
+[Pp Indent Continue]
+Category=10
+Description="<html>Specifies the number of additional spaces to indent continued preprocessor lines</html>"
+Enabled=false
+EditorType=numeric
+CallName="pp_indent_continue="
+MinVal=-16
+MaxVal=16
+ValueDefault=0
+
 [Pp Space After]
 Category=10
 Description="<html>Add or remove space after # based on pp_level of #if blocks.</html>"
