--- a/documentation/htdocs/default.cfg
+++ b/documentation/htdocs/default.cfg
@@ -3313,6 +3313,9 @@ pp_indent_at_level0             = false    # true/false
 # Default: 1
 pp_indent_count                 = 1        # unsigned number
 
+# Specifies the number of additional spaces to indent continued preprocessor lines
+pp_indent_continue              = 0        # number
+
 # Add or remove space after # based on pp_level of #if blocks.
 pp_space_after                  = ignore   # ignore/add/remove/force/not_defined
 
